added dep/arr option for time